# gec-attribute

./: LICENSE  README.md  pyproject.toml
experiments/: README.md  base.py  bias.py  calc_precision.py  case_study.py  consistency.py  corr_base_free.py  efficiency.py  human_eval.py  num_edits_dist.py  shapley_sampling.py
experiments/corrected/conll14/: bart.txt  gector-2024.txt  gector-roberta.txt  gpt-4o-mini.txt  t5.txt
experiments/corrected/jfleg-dev/: bart.txt  gector-2024.txt  gector-roberta.txt  gpt-4o-mini.txt  t5.txt
gec_attribute/: __init__.py
gec_attribute/methods/: __init__.py  add.py  base.py  shapley.py  shapley_sampling.py  sub.py
gec_attribute/metrics/: __init__.py  base.py  impara.py  ppl.py  some.py
